--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Validate Jsons
+      - name: Validate JSONs
         uses: anyone-developer/anyone-validate-json@main
         with:
           file-extension: ".json"
