ci(Mergify): configuration update
Signed-off-by: Aryan Gupta <guptaaryan189@gmail.com>

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,7 @@ pull_request_rules:
   - name: Automatic merge on approval
     conditions:
       - check-success=Validate Jsons
-      - -files~=^(!?changelogs/**)
+      - -files~=^(!?changelogs/)
       - -files~=^(!?builds/)
     actions:
       merge:
